RESOLVED FIXED301142
ASSERTION FAILED: iterator != m_sessionToPageIDsMap.end() in WebProcessPool::pageEndUsingWebsiteDataStore
https://bugs.webkit.org/show_bug.cgi?id=301142
Summary ASSERTION FAILED: iterator != m_sessionToPageIDsMap.end() in WebProcessPool::...
Sihui Liu
Reported 2025-10-20 15:49:46 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-20 15:50:50 PDT Comment hidden (obsolete)
Sihui Liu
Comment 2 2025-10-20 15:55:57 PDT
Sihui Liu
Comment 3 2025-10-20 15:56:09 PDT
Alexey Proskuryakov
Comment 4 2025-10-20 16:27:32 PDT
Is this the same as bug 300168?
Chris Dumez
Comment 5 2025-10-20 17:14:18 PDT
*** Bug 300168 has been marked as a duplicate of this bug. ***
EWS
Comment 6 2025-10-21 21:11:04 PDT
Committed 301928@main (1ba1a365ee23): <https://commits.webkit.org/301928@main> Reviewed commits have been landed. Closing PR #52688 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.